Update SupplierService.java